# claude-gates

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  dprint.json  package.json  pyproject.toml  todo.md  tsconfig.json
.claude/: settings.local.json  timestamp.md
.claude-plugin/: marketplace.json  plugin.json
.research/: competitive-landscape.md
agents/: gater.md
commands/: verify.md
hooks/: hooks.json
scripts/: FrontmatterParser.js  GateRepository.js  GateToggle.js  GateToggle.py  McpServer.js  McpServer.py  Messaging.js  PipelineBlock.js  PipelineBlock.py  PipelineConditions.js  PipelineConditions.py  PipelineE2eTest.js  PipelineEngine.js  PipelineInjection.js  PipelineInjection.py  PipelineRepository.js  PipelineTest.js  PipelineVerification.js  PipelineVerification.py  PlanGate.js  PlanGate.py  PlanGateClear.js  PlanGateClear.py  SessionCleanup.js  SessionCleanup.py  SessionContext.js  SessionContext.py  SessionManager.js  StateMachine.js  WebLauncher.js  WebLauncher.py  WebServer.js  WebServer.py  agent-gate-compat.js  agent-gate-conditions.js  agent-gate-injection.js  agent-gate-shared.js  agent-gate-test.js  agent-gate-verification.js  benchmark.js  (+31 more)
src/: FrontmatterParser.ts  GateRepository.ts  GateToggle.ts  McpServer.ts  Messaging.ts  PipelineBlock.ts  PipelineConditions.ts  PipelineE2eTest.ts  PipelineEngine.ts  PipelineInjection.ts  PipelineRepository.ts  PipelineTest.ts  PipelineVerification.ts  PlanGate.ts  PlanGateClear.ts  SessionCleanup.ts  SessionContext.ts  SessionManager.ts  Tracing.ts  (+27 more)
(+75 files in other folders)
