[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-gates"
version = "5.0.0"
description = "Declarative pipeline gates for Claude Code."
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "kam-l" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
